# Machine-Learning

.github/workflows/: marchmadness-ci.yml
MarchMadness-AI/: .gitignore  README.md  REVIEW.md  pyproject.toml  requirements.txt  run_march_madness.py
MarchMadness-AI/assets/: lineup_features.csv  tempo_features.csv  win_loss.csv
MarchMadness-AI/assets/mm26_first_four_round1_prep/: README.md  mm26_cleaned_tournament_odds_subset_2026.csv  mm26_first_four_2026_model_input.csv  mm26_first_round_after_first_four_patch_template_4.csv  mm26_first_round_playin_scenarios_8_2026_model_input.csv  summary.json
MarchMadness-AI/config/: defaults.json
MarchMadness-AI/examples/2026_prep_smoke_test/outputs/bracket/: predicted_bracket_2026.csv  predicted_bracket_2026.md
MarchMadness-AI/examples/2026_prep_smoke_test/outputs/current_market/: market_candidate_sides.csv  market_consensus.csv  market_predictions.csv  market_report.md  market_summary.json  raw_market_rows.csv
MarchMadness-AI/src/mm26_xgb/: __init__.py  attached_data.py  bracket.py  calibration.py  cli.py  config.py  data.py  execution.py  external_features.py  features.py  ledger.py  markets.py  modeling.py  simulation.py
MarchMadness-AI/tests/: conftest.py  test_ledger.py  test_markets.py  test_simulation.py
MarchMadness-AI/trained_kaggle_market_model/: external_team_features.csv  feature_columns.json  feature_importance.csv  fill_values.json  model_bundle.joblib  train_config.json  training_frame_head.csv  training_summary.json
march_madness_v2/: README.md  run.bat  run.sh
march_madness_v2/assets/: ats.csv  (+1 more)
(+5 files in other folders)
