[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm26-xgb"
version = "0.1.0"
description = "Market-aware XGBoost models and tooling for NCAA March Madness predictions and betting analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "xgboost>=3.0",
    "joblib>=1.3",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
mm26 = "mm26_xgb.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
